# foxpilot

./: README.md  issues.md  pyproject.toml
docs/: plugin-vs-site-module.md
docs/commands/: amazon.md  auth.md  docs.md  drive.md  evidence.md  excel.md  figma.md  gcal.md  github.md  gmail.md  instagram.md  linkedin.md  lms.md  macro.md  maps.md  mission.md  onedrive.md  outlook.md  page.md  pinterest.md  plugins.md  qa.md  reddit.md  teams.md  twitter.md  wait-expect.md  wikipedia.md  youtube-music.md  youtube.md
docs/plans/: 2026-04-24-browser-command-foundation.md  2026-04-24-browser-command-foundation.yaml
docs/playbooks/: instagram-dm-via-mcp.md
docs/specs/: 2026-04-24-foxpilot-plugin-expansion-spec.md  2026-04-24-site-command-branches-design.md  2026-04-25-plugin-batch-spec.md
plugins/: README.md
src/foxpilot/: actions.py  cli.py  core.py  doctor.py  evidence.py  mcp_server.py  mission.py  page_brain.py  qa.py  readability.py  results.py  safety.py  search.py  selector_memory.py
tests/: test_actions.py  test_browser_smoke.py  test_cli.py  test_cli_expansion_surfaces.py  test_cli_surface.py  test_core.py  test_docs_site.py  test_doctor.py  test_evidence.py  test_github_site.py  test_lifecycle.py  test_macro_site.py  test_mcp_expansion.py  test_mission.py  test_onedrive_site.py  test_page_brain.py  test_page_site.py  test_plugin_cli.py  test_plugins.py  test_qa.py  test_readability.py  test_results.py  test_safety.py  test_selector_memory.py  test_wait_expect_site.py  test_youtube_site.py
tests/fixtures/: browser_content.html  browser_form.html
(+108 files in other folders)
