[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "foxpilot"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "selenium>=4.25",
    "mcp>=1.0",
]

[project.scripts]
foxpilot = "foxpilot.cli:_run"

[tool.hatch.build.targets.wheel]
packages = ["src/foxpilot"]

[tool.pytest.ini_options]
testpaths = ["tests"]
